...
            android:rowCount="2"
            android:orientation="horizontal"
            android:useDefaultMargins="true">

            <!-- Opción 1: Álbumes -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/albumContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
...
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Opción 2: Artistas -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/performerContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
...
